Bug 290999 - Selected header text does not become unselected when selecting text elsewhere
Summary: Selected header text does not become unselected when selecting text elsewhere
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: general (show other bugs)
Version: 2.8 Pre-Alpha
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-08 21:12 UTC by Kubuntiac
Modified: 2013-11-22 10:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kubuntiac 2012-01-08 21:12:31 UTC
Version:           1.5 or before
OS:                Linux

If I select text in the body of a document and then select text elsewhere, the original text becomes unselected... unless it was in the header.

Reproducible: Always

Steps to Reproduce:
1. Add a header
2. Select text in the header
3. Select text in the page body

Actual Results:  
Both pieces of text display as selected (although copying only copies the text in the body)

Expected Results:  
Header text stops being displayed as selected

OS: Linux (x86_64) release 3.1-CHAKRA
Compiler: gcc
Current Git trunk version of words
Comment 1 dasaan.san 2013-11-03 14:18:25 UTC
Confirmed with Calligra Words 2.6.4

Also occurs the opposite way too.

1. Create blank document
2. Add header
3. Enter text in header
4. Enter text in body
5. Select text in body
6. Select text in header

You should now see both sections of text selected
Comment 2 Camilla Boemann 2013-11-03 14:38:15 UTC
also reproducable in master
Comment 3 Camilla Boemann 2013-11-09 08:39:04 UTC
Git commit 10abf88194f18bff930538ca1e0290819b4cac96 by C. Boemann.
Committed on 09/11/2013 at 08:17.
Pushed by boemann into branch 'master'.

Make sure we erase an old selection in another textshape whenever we make a new selection.
 - This occurs as a result of a tool change or just selecting text in another textshape

M  +14   -2    plugins/textshape/TextTool.cpp
M  +1    -0    plugins/textshape/TextTool.h

http://commits.kde.org/calligra/10abf88194f18bff930538ca1e0290819b4cac96
Comment 4 Halla Rempt 2013-11-22 10:56:59 UTC
Git commit ed9fe8f1a1ad0c438dfcfb238edc30b2e4f793ce by Boudewijn Rempt, on behalf of C. Boemann.
Committed on 09/11/2013 at 08:17.
Pushed by rempt into branch 'calligra/2.7'.

Make sure we erase an old selection in another textshape whenever we make a new selection.
 - This occurs as a result of a tool change or just selecting text in another textshape

M  +14   -2    plugins/textshape/TextTool.cpp
M  +1    -0    plugins/textshape/TextTool.h

http://commits.kde.org/calligra/ed9fe8f1a1ad0c438dfcfb238edc30b2e4f793ce