Make sure we erase an old selection in another textshape whenever we make a new selection.  - This occurs as a result of a tool change or just selecting text in another textshape

BUG: 290999